--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ CSS CUSTOM PROPS / VARIABLES
 
     /* P */
     --ff-ss: 'MadrasExtraLight';
-    --ff-ss-size: 1.2em;
+    --ff-ss-size: 1em;
 
     /* CONTENT PADDING */
     --pad-top: 30px;
@@ -112,7 +112,6 @@ h1 {
     font-family: madrasBoldItalic;
     font-size: var(--ff-size);
     letter-spacing: 0.472em;
-    line-height: 1.3;
 
     color: var(--white);
 }
@@ -121,7 +120,6 @@ h2 {
     font-family: madrasBoldItalic;
     font-size: var(--ff-size-h2);
     letter-spacing: 0.29em;
-    line-height: 1.3;
 
     color: var(--white);
 }
@@ -130,7 +128,6 @@ h3 {
     font-family: madrasBoldItalic;
     font-size: var(--ff-size);
     letter-spacing: 0.472em;
-    line-height: 1.3;
 
     color: var(--white);
 }
@@ -386,14 +383,103 @@ DIV
     grid-area: g;
 }
 
-.g p {
-    text-align: initial;
-    padding-left: 1em;
-    padding-right: 1em;
-
-    font-style: italic;
+.g svg {
+    display: block;
+    margin: auto;
 }
 
+.g p {
+    text-align: initial;
+
+    font-style: italic;
+
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.g .quote::before {
+    content: open-quote;
+    font-size: 1.2em;
+    color: var(--gold);
+}
+
+.g .quote::after {
+    content: close-quote;
+    font-size: 1.2em;
+    color: var(--gold);
+}
+
+.contact-form{
+    display: flex;
+    max-width: 550px;
+    margin: 0 auto;
+    background: rgba(0,0,0,0.8);
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  }
+  
+  .input-fields{
+    display: flex;
+    flex-direction: column;
+    margin-right: 4%;
+  }
+  
+  .input-fields,
+  .msg{
+    width: 48%;
+  }
+  
+  .input-fields .input,
+  .msg textarea{
+    margin: 10px 0;
+    background: transparent;
+    border: 0px;
+    border-bottom: 2px solid #c5ecfd;
+    padding: 10px;
+    color: #c5ecfd;
+    width: 100%;
+  }
+  
+  .msg textarea{
+    height: 212px;
+  }
+  
+  ::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: #c5ecfd;
+  }
+  ::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #c5ecfd;
+  }
+  :-ms-input-placeholder {
+    /* IE 10+ */
+    color: #c5ecfd;
+  }
+  
+  .btn {
+      background: #39b7dd;
+      text-align: center;
+      padding: 15px;
+      border-radius: 5px;
+      color: #fff;
+      cursor: pointer;
+      text-transform: uppercase;
+  }
+  
+  @media screen and (max-width: 600px){
+    .contact-form{
+      flex-direction: column;
+    }
+    .msg textarea{
+      height: 80px;
+    }
+    .input-fields,
+    .msg{
+      width: 100%;
+    }
+  }
 
 
 
