--- a/style.css
+++ b/style.css
@@ -164,12 +164,33 @@ SVG
 }
 
 /*--------------------------------------------------
-SVG
+FORM
 --------------------------------------------------*/
 
 form {
     
 }
+
+input, select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    resize: vertical;
+}
+
+.submit {
+    background-color: var(--white);
+    color: var(--black);
+    padding: 2px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: left;
+
+    font-size: 1.1em;
+  }
 
 /*--------------------------------------------------
 GRID
