--- a/style.css
+++ b/style.css
@@ -417,12 +417,12 @@ form {
 .form-left {
     flex-direction: column;
     width: 100%;
-    padding-right: var(--pad-right);
+    margin-right: 1em;
 }
 
 .form-right {
     flex-direction: column;
-    padding-left: var(--pad-left);
+    margin-left: 1em;
     width: 100%;
 }
 
@@ -804,7 +804,7 @@ MEDIA QUERY
     form {
         display: flex;
         flex-flow: row wrap;
-        width: 100%;
+        flex-direction: column;
     }
     
     .form-left {
@@ -887,7 +887,7 @@ MEDIA QUERY
         width: 40%;
         padding-top: var(--pad-top);
         transition: transform 1s, filter 1s ease-in-out;
-        filter: brightness(100%);
+        filter: brightness(50%);
     }
     
     .avedapic:hover img {
