--- a/style.css
+++ b/style.css
@@ -137,8 +137,32 @@ h3 {
 }
 
 /*--------------------------------------------------
+HR
+--------------------------------------------------*/
+
+hr { 
+    display: block;
+    width: 90%; 
+
+    margin-top: var(--pad-top);
+    
+    margin-before: 0.5em; 
+    margin-after: 0.5em;
+    margin-start: auto; 
+    margin-end: auto; 
+    overflow: hidden; 
+    border-style: solid; 
+    border-width: 0.5px;
+    border-bottom: var(--alarm);
+
+    /* width: 50%; margin: auto; margin-top: 5%; margin-bottom: 5%; transform: rotate(10deg); border-color: purple; */
+    /* border-color: var(--white); */
+}
+
+/*--------------------------------------------------
 IMG
 --------------------------------------------------*/
+
 
 /*--------------------------------------------------
 SVG
@@ -247,6 +271,7 @@ DIV
 
 .a {
     display: flex;
+    flex-flow: row wrap;
     justify-content: left;
     align-items: center;
     
@@ -260,6 +285,7 @@ DIV
 
 .b {
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
 
@@ -267,6 +293,8 @@ DIV
     padding-bottom: var(--pad-but);
 
     border-bottom: var(--white) solid 0.5px;
+
+    /* border: 1px solid green; */
 
 	grid-area: b
 }
@@ -566,7 +594,7 @@ MEDIA QUERY
     SVG
     --------------------------------------------------*/
     .gingerlogo {
-        width: 25%;
+        width: 35%;
     }
 
     .gingerlogo .a {
@@ -732,8 +760,8 @@ MEDIA QUERY
         display: flex;
         flex-flow: row wrap;
 
-        justify-content: space-between;
-        align-items: stretch;
+        justify-content: center;
+        align-items: center;
     
         height: auto;
         width: 100%;
@@ -742,8 +770,11 @@ MEDIA QUERY
     }
     
     .contactbox {
-        /* border: green solid 1px; */
-        flex-grow: 3;
+        text-align: center;
+        flex-grow: 2;
+
+        padding-top: var(--pad-top);
+        padding-bottom: var(--pad-but);
     }
     
     .e {
@@ -816,6 +847,7 @@ MEDIA QUERY
     .form-right {
         display: flex;
         flex-direction: column;
+        margin-left: 0em;
 
         width: 100%;
     }
