--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ CSS CUSTOM PROPS / VARIABLES
     --pad-left: 1em;
     --pad-right: 1em;
 
+    /* GRID BORDER HELP */
+    --gridhelp: 1px;
 }
 
 /*--------------------------------------------------
@@ -136,11 +138,11 @@ h3 {
     color: var(--white);
 }
 
-hr { 
+.fineline { 
     display: block;
     width: 90%; 
 
-    margin-top: var(--pad-top);
+    /* margin-top: var(--pad-top); */
     
     margin-before: 0.5em; 
     margin-after: 0.5em;
@@ -149,7 +151,8 @@ hr {
     overflow: hidden; 
     border-style: solid; 
     border-width: 0.5px;
-    border-bottom: var(--alarm);
+    border-color: var(--white);
+    /* border-bottom: var(--alarm); */
 
     /* width: 50%; margin: auto; margin-top: 5%; margin-bottom: 5%; transform: rotate(10deg); border-color: purple; */
     /* border-color: var(--white); */
@@ -235,7 +238,7 @@ GRID
 	grid-gap: 0px;
 
     grid-template-columns: auto 700px auto;
-    grid-template-rows: auto auto auto auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto auto auto auto auto;
 
 	grid-template-areas:
         ". a ." /* LOGO */    
@@ -274,7 +277,7 @@ DIV
     padding-bottom: var(--pad-but);
 
     border-bottom: var(--white) solid 0.5px;
-
+    border: green solid var(--gridhelp);
 	grid-area: a
 }
 
@@ -287,7 +290,7 @@ DIV
     padding-bottom: var(--pad-but);
 
     border-bottom: var(--white) solid 0.5px;
-
+    border: yellow solid var(--gridhelp);
 	grid-area: b
 }
 
@@ -310,7 +313,7 @@ DIV
     padding-right: var(--pad-right);
 
     border-bottom: var(--white) solid 0.5px;
-
+    border: green solid var(--gridhelp);
 	grid-area: c
 }
 
@@ -354,7 +357,7 @@ DIV
     align-items: center; */
     
     /* border-bottom: var(--white) solid 0.5px; */
-    
+    border: yellow solid var(--gridhelp);
 	grid-area: d
 }
 
@@ -383,7 +386,7 @@ DIV
     padding-bottom: var(--pad-but);
     
     border-bottom: var(--white) solid 0.5px;
-    
+    border: green solid var(--gridhelp);
 	grid-area: e
 }
 
@@ -416,7 +419,7 @@ DIV
     padding-bottom: var(--pad-but);
 
     border-bottom: var(--white) solid 0.5px;
-
+    border: yellow solid var(--gridhelp);
     grid-area: f;
 
 }
@@ -456,7 +459,7 @@ form {
     padding-bottom: var(--pad-but);
 
     border-bottom: var(--white) solid 0.5px;
-
+    border: green solid var(--gridhelp);
     grid-area: g;
 }
 
@@ -532,7 +535,7 @@ form {
     padding-right: var(--pad-right);
 
     border-bottom: var(--white) solid 0.5px;
-
+    border: yellow solid var(--gridhelp);
     grid-area: h;
 }
 
@@ -548,7 +551,7 @@ form {
 
     height: 5px;
     width: 100%;
-
+    border: green solid var(--gridhelp);
     grid-area: i;
 
 }
@@ -675,7 +678,6 @@ MEDIA QUERY
         padding-bottom: var(--pad-but);
 
         border-bottom: var(--white) solid 0.5px;
-
         grid-area: a
     }
 
@@ -688,7 +690,6 @@ MEDIA QUERY
         padding-bottom: var(--pad-but);
     
         border-bottom: var(--white) solid 0.5px;
-    
         grid-area: b
     }
     
@@ -842,12 +843,14 @@ MEDIA QUERY
     .form-left {
         display: flex;
         flex-direction: column;
+        margin-left: 0em;
         width: 100%;
     }
     
     .form-right {
         display: flex;
         flex-direction: column;
+        margin-left: 0em;
 
         width: 100%;
     }
