--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ CSS CUSTOM PROPS / VARIABLES
 :root {
 
     /* COLOURS */
-    --gold: #DAA520;
+    --gold: #ccac00;
     --black: #18181A;
     --white: #F7F7F7;
     
@@ -44,11 +44,11 @@ CSS CUSTOM PROPS / VARIABLES
 
     /* H1 */
     --ff: 'madrasBoldItalic';
-    --ff-size: 1.6rem;
+    --ff-size: 1.6em;
 
     /* H2 */
     --ff-ss: 'madrasBoldItalic';
-    --ff-size-h2: 1.1rem;
+    --ff-size-h2: 1.1em;
 
     /* P */
     --ff-ss: 'MadrasExtraLight';
@@ -123,7 +123,7 @@ h1 {
 h2 {
     font-family: madrasBoldItalic;
     font-size: var(--ff-size-h2);
-    letter-spacing: 0.29em;
+    letter-spacing: 0.19em;
 
     color: var(--white);
 }
@@ -188,7 +188,7 @@ SVG
     
     fill: var(--gold);
 
-    padding-bottom: var(--pad-but);
+    padding-bottom: 1em;
 }
 
 /*--------------------------------------------------
@@ -278,8 +278,6 @@ DIV
     padding-top: var(--pad-top);
     padding-bottom: var(--pad-but);
 
-    border-bottom: var(--white) solid 0.5px;
-
 	grid-area: a
 }
 
@@ -292,7 +290,7 @@ DIV
     padding-top: var(--pad-top);
     padding-bottom: var(--pad-but);
 
-    border-bottom: var(--white) solid 0.5px;
+    /* border-bottom: var(--white) solid 0.5px; */
 
     /* border: 1px solid green; */
 
@@ -405,12 +403,11 @@ DIV
 .invobox {
     /* border: green solid 1px; */
     flex-grow: 3;
-
     text-align: center;
 }
 
 .invobox p {
-    text-align: initial;
+    text-align: center;
     padding-left: var(--pad-left);
     padding-right: var(--pad-right);
 }
@@ -475,7 +472,6 @@ form {
 
 .g .quote {
     text-align: initial;
-
     font-style: italic;
 
     padding-left: var(--pad-left);
@@ -483,15 +479,18 @@ form {
 }
 
 .g .quote::before {
-    content: open-quote;
-    font-size: 1.2em;
+    content: '«';
+    font-size: 2.2em;
     color: var(--gold);
+    vertical-align: text-bottom;
+    
 }
 
 .g .quote::after {
-    content: close-quote;
-    font-size: 1.2em;
+    content: '»';
+    font-size: 2.2em;
     color: var(--gold);
+    vertical-align: text-top;
 }
 
 .avedapic-container {
@@ -511,7 +510,7 @@ form {
     margin-right: 1em;
 
     width: 100%;
-    background-color: var(--gold);;
+    background-color: var(--gold);
 
     box-shadow: inset 0 0 90px #000000;
 }
@@ -548,405 +547,3 @@ form {
     height: 500px;
     width: 100%;
 }
-
-/*--------------------------------------------------
-MEDIA QUERY
---------------------------------------------------*/
-
-@media screen and (max-width: 720px) {
-
-    /*--------------------------------------------------
-    CSS CUSTOM PROPS / VARIABLES
-    --------------------------------------------------*/
-
-    :root {
-
-        /* COLOURS */
-        --gold: #DAA520;
-        --black: #18181A;
-        --white: #F7F7F7;
-        
-        --alarm: #da4820;
-
-        /* H1 */
-        --ff: 'madrasBoldItalic';
-        --ff-size: 1.6rem;
-
-        /* H2 */
-        --ff-ss: 'madrasBoldItalic';
-        --ff-size-h2: 1.1rem;
-
-        /* P */
-        --ff-ss: 'MadrasExtraLight';
-        --ff-ss-size: 1em;
-
-        /* CONTENT PADDING TOP/BUT */
-        --pad-top: 1em;
-        --pad-but: 1em;
-
-        /* CONTENT PADDING LEFT/RIGHT */
-        --pad-left: 1em;
-        --pad-right: 1em;
-
-    }
-
-    /*--------------------------------------------------
-    SVG
-    --------------------------------------------------*/
-    .gingerlogo {
-        width: 35%;
-    }
-
-    .gingerlogo .a {
-        fill: var(--gold);
-    }
-
-    .avedalogo {
-        width: 50%;
-    }
-
-    .avedalogo .a {
-        fill: var(--gold);
-    }
-
-    .invosvg {
-        width: 50px;
-        
-        fill: var(--gold);
-
-        padding-bottom: var(--pad-but);
-    }
-
-    /*--------------------------------------------------
-    GRID
-    --------------------------------------------------*/
-
-    .container {
-        width: 100vw;
-        height: 100vh;
-
-        display: grid;
-        grid-gap: 0px;
-
-        grid-template-columns: 100vw;
-        grid-template-rows: auto auto auto auto auto auto auto auto;
-
-        grid-template-areas:
-            "a" /* LOGO */    
-            "b" /* INFO TEXT */    
-            "c" /* PIC BOX */
-            "e" /* INVO BOX */
-            "g" /* AVEDA CONTAINER */
-            "f" /* FORM */
-            "h" /* MAPS */
-            "d" /* KONTAKT */;
-    }
-
-    /*--------------------------------------------------
-    HEADER SPAN
-    --------------------------------------------------*/
-
-    .header-span {
-        background-color: var(--alarm);
-
-        height: 130px;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center ;
-
-        text-align: center;
-    }
-
-    /*--------------------------------------------------
-    DIV
-    --------------------------------------------------*/
-
-    .a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-
-        border-bottom: var(--white) solid 0.5px;
-
-        grid-area: a
-    }
-
-    .b {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-    
-        border-bottom: var(--white) solid 0.5px;
-    
-        grid-area: b
-    }
-    
-    .b p {
-        text-align: initial;
-        padding-left: var(--pad-left);
-        padding-right: var(--pad-right);
-    }
-    
-    .c {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    
-        /* border: solid 1px red; */
-    
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-        padding-left: var(--pad-left);
-        padding-right: var(--pad-right);
-    
-        border-bottom: var(--white) solid 0.5px;
-    
-        grid-area: c
-    }
-    
-    .background-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-    
-        height: 100px;
-        width: 100%;
-    
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-        
-    
-        background-image: url(./img/anna-demianenko-12397-unsplash.jpg);
-        background-repeat: no-repeat;
-        background-size: 100% auto;
-        background-position-y: -50px;
-        background-attachment: fixed,;
-        background-repeat: no-repeat, repeat-y;
-    
-    
-        /* PARALAX */
-        /* background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover; */
-    }
-    
-    .d {
-        display: flex;
- 
-        justify-content: center;
-        align-items: center;
-        
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-        
-        /* justify-content: center;
-        align-items: center; */
-        
-        /* border-bottom: var(--white) solid 0.5px; */
-        
-        grid-area: d
-    }
-    
-    .contact-container {
-        display: flex;
-        flex-flow: row wrap;
-
-        justify-content: center;
-        align-items: center;
-    
-        height: auto;
-        width: 100%;
-    
-        /* border: 1px solid red; */
-    }
-    
-    .contactbox {
-        text-align: center;
-        flex-grow: 2;
-
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-    }
-    
-    .e {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-        
-        border-bottom: var(--white) solid 0.5px;
-        
-        grid-area: e
-    }
-    
-    .invo-container {
-        display: flex;
-/**/    flex-flow: row wrap;
-        justify-content: space-between;
-        align-items: stretch;    
-    }
-    
-    .invobox {
-        /* border: green solid 1px; */
-        flex-grow: 3;
-    
-        text-align: center;
-        padding-top: var(--pad-top);
-    }
-    
-    .invobox p {
-        text-align: initial;
-        padding-left: var(--pad-left);
-        padding-right: var(--pad-right);
-    }
-    
-    .f {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-    
-        border-bottom: var(--white) solid 0.5px;
-    
-        grid-area: f;
-    
-    }
-    
-    .form-container {
-        width: 100%;
-    
-        padding-left: 1em;
-        padding-right: 1em;
-    }
-    
-    form {
-        display: flex;
-        flex-flow: row wrap;
-        flex-direction: column;
-    }
-    
-    .form-left {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    
-    .form-right {
-        display: flex;
-        flex-direction: column;
-        margin-left: 0em;
-
-        width: 100%;
-    }
-    
-    .g {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-    
-        border-bottom: var(--white) solid 0.5px;
-    
-        grid-area: g;
-    }
-    
-    .g svg {
-        display: block;
-        margin: auto;
-    }
-    
-    .g .quote {
-        text-align: initial;
-    
-        font-style: italic;
-    
-        padding-left: var(--pad-left);
-        padding-right: var(--pad-right);
-    }
-    
-    .g .quote::before {
-        content: open-quote;
-        font-size: 1.2em;
-        color: var(--gold);
-    }
-    
-    .g .quote::after {
-        content: close-quote;
-        font-size: 1.2em;
-        color: var(--gold);
-    }
-    
-    .avedapic-container {
-        display: flex;
-        flex-flow: row wrap;
-        padding-bottom: var(--pad-but);
-    }
-    
-    .avedapic {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        overflow: hidden;
-    
-        margin-left: 1em;
-        margin-right: 1em;
-    
-        width: 140px;
-        height: 140px;
-        background-color: var(--gold);;
-        border-radius: 50% ;
-    
-        box-shadow: inset 0 0 90px #000000;
-    }
-    
-    .avedapic img {
-        width: 40%;
-        padding-top: var(--pad-top);
-        transition: transform 1s, filter 1s ease-in-out;
-        filter: brightness(50%);
-    }
-    
-    .avedapic:hover img {
-        transform: scale(1.2);
-        filter: brightness(100%);
-      }
-    
-    .h {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        
-        padding-top: var(--pad-top);
-        padding-bottom: var(--pad-but);
-        padding-left: var(--pad-left);
-        padding-right: var(--pad-right);
-    
-        border-bottom: var(--white) solid 0.5px;
-    
-        grid-area: h;
-    }
-    
-    #map {
-        height: 500px;
-        width: 100%;
-    }
-
-
-  }
